[project]
name = "shopperai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.0",
    "generativeai>=0.0.1",
    "playwright>=1.55.0",
    "protobuf>=6.33.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
